testing servo motion with rest of project

--- a/client/feederInterface/nbproject/project.properties
+++ b/client/feederInterface/nbproject/project.properties
@@ -28,6 +28,7 @@ dist.jar=${dist.dir}/feederInterface.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.gson-2.2.2.jar=C:\\Users\\Rafael\\Downloads\\gson-2.2.2.jar\\gson-2.2.2.jar
+file.reference.json-simple-1.1.1.jar=json-simple-1.1.1.jar
 file.reference.json-simple-1.1.jar=C:\\Users\\Rafael\\Downloads\\json-simple-1.1.jar\\json-simple-1.1.jar
 file.reference.jython-standalone-2.7.0.jar=C:\\Users\\Rafael\\Downloads\\jython-standalone-2.7.0.jar
 includes=**
@@ -35,7 +36,8 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.jython-standalone-2.7.0.jar}:\
     ${file.reference.gson-2.2.2.jar}:\
-    ${file.reference.json-simple-1.1.jar}
+    ${file.reference.json-simple-1.1.jar}:\
+    ${file.reference.json-simple-1.1.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
